test/functions/elliot/reissueCompilerError.good
reissueCompilerError.chpl:12: error: err1
reissueCompilerError.chpl:12: warning: warn1
reissueCompilerError.chpl:13: error: err1
reissueCompilerError.chpl:13: warning: warn1
reissueCompilerError.chpl:14: error: err1
reissueCompilerError.chpl:14: warning: warn1
reissueCompilerError.chpl:16: warning: warn
reissueCompilerError.chpl:17: warning: warn
reissueCompilerError.chpl:19: error: err
reissueCompilerError.chpl:20: error: err
reissueCompilerError.chpl:22: error: err1
reissueCompilerError.chpl:22: warning: warn1
